--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "volo": {
-        "url": "https://raw.githubusercontent.com/lagden/jQuery-Form-Validator/{version}/form-validator/jquery.form-validator.js"
+        "url": "git@github.com:TristanVALCKE/JFV.git"
     },
     "main": "jquery.form-validator.js"
 }
