library name now lowercase in bower json

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "jQuery-Form-Validator",
+  "name": "jquery-form-validator",
   "homepage": "http://formvalidator.net/",
   "authors": [
     "victorjonsson"
