--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "grunt-contrib-uglify": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
     "jquery": "^2.1.4",
+    "numeral": "~1.5.3",
     "qunitjs": "^1.20.0"
   },
   "dependencies": {
