Change Grunt tasks to match new directory structure
-Fix JSHint to check language files (it wasn't checking those before)
-Fix JSHint errors
-Add task to minify CSS
-Bump dependencies
-Reorganize tasks. Default task is now a dev task which watches directory for changes and
does tests/builds upon changes, but not minification; "build-production" task bumps version,
does tests, and minifies output

--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "grunt-cli": "~0.1.13",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-connect": "^0.11.2",
-    "grunt-contrib-jshint": "^0.11.0",
+    "grunt-contrib-cssmin": "~0.14.0",
+    "grunt-contrib-jshint": "~1.0.0",
     "grunt-contrib-qunit": "^0.7.0",
-    "grunt-contrib-uglify": "^0.8.0",
+    "grunt-contrib-uglify": "~0.11.1",
     "grunt-contrib-watch": "^0.6.1",
     "jquery": "^2.1.4",
     "numeral": "~1.5.3",
