--- a/package.json
+++ b/package.json
@@ -21,13 +21,11 @@
     "url": "http://victorjonsson.se"
   },
   "homepage": "http://formvalidator.net/",
-  "volo": {
-    "url": "https://raw.githubusercontent.com/lagden/jQuery-Form-Validator/{version}/form-validator/jquery.form-validator.js"
-  },
   "license": "MIT",
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-cli": "~0.1.13",
+    "grunt-contrib-clean": "~1.0.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-connect": "^0.11.2",
     "grunt-contrib-cssmin": "~0.14.0",
