--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/victorjonsson/jQuery-Form-Validator.git"
   },
   "bugs": {
-    "url": "https://github.com/jquery-boilerplate/jquery-boilerplate/issues"
+    "url": "https://github.com/victorjonsson/jQuery-Form-Validator/issues"
   },
   "author": {
     "name": "Victor Jonsson",
@@ -33,6 +33,7 @@
     "grunt-contrib-qunit": "^0.7.0",
     "grunt-contrib-uglify": "~0.11.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-umd": "~2.3.5",
     "jquery": "^2.1.4",
     "numeral": "~1.5.3",
     "qunitjs": "^1.20.0"
@@ -41,6 +42,7 @@
     "jquery": ">1.8.0"
   },
   "scripts": {
+    "prepublish": "grunt prepublish",
     "test": "grunt test"
   }
 }
