--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "grunt-contrib-clean": "~1.0.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-connect": "^0.11.2",
+    "grunt-contrib-copy": "~1.0.0",
     "grunt-contrib-cssmin": "~0.14.0",
     "grunt-contrib-jshint": "~1.0.0",
     "grunt-contrib-qunit": "^0.7.0",
