--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-umd": "~2.4.0",
     "numeral": "~1.5.3",
-    "qunitjs": "^1.20.0"
+    "qunitjs": "^1.20.0",
+    "jquery": ">1.8.0"
   },
   "dependencies": {
     "jquery": ">1.8.0"
