--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "jquery": "2.2.4"
   },
   "dependencies": {
-    "jquery": "2.2.4"
+    "jquery": ">1.8.0"
   },
   "scripts": {
     "prepublish": "grunt prepublish",
