--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "grunt-umd": "~2.4.0",
     "numeral": "~1.5.3",
     "qunitjs": "^1.20.0",
-    "jquery": "2.2.4"
+    "jquery": ">1.8.0"
   },
   "dependencies": {
     "jquery": ">1.8.0"
